Salesforce/force-app/main/default/objects/PPI_Work_Category__mdt/PPI_Work_Category__mdt.object-meta.xml
<CustomObject>
    <description>PPI Project - Metadata for Notifiable Works Register</description>
    <label>PPI Work Category</label>
    <pluralLabel>PPI Work Categories</pluralLabel>
</CustomObject>