Salesforce/force-app/main/default/objects/PPI_Work_Category__mdt/fields/Category_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Work__c</fullName>
    <label>Category of Work</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>