Salesforce/force-app/main/default/objects/PPI_Work_Category__mdt/fields/Help_text__c.field-meta.xml
<CustomField>
    <fullName>Help_text__c</fullName>
    <label>Help text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>