Salesforce/force-app/main/default/objects/PPI_Work_Category__mdt/fields/Helper_Link__c.field-meta.xml
<CustomField>
    <fullName>Helper_Link__c</fullName>
    <label>Helper Link</label>
    <type>Url</type>
</CustomField>