Salesforce/force-app/main/default/objects/PPI_Work_Category__mdt/fields/Register_Type__c.field-meta.xml
<CustomField>
    <fullName>Register_Type__c</fullName>
    <label>Register Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notifiable Works</fullName>
                    <default>true</default>
                    <label>Notifiable Works</label>
                </value>
                <value>
                    <fullName>Pool Safety</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>