Salesforce/force-app/main/default/objects/PPI_Work_Category__mdt/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>